Fixed the `InaccessibleObjectException` thrown while running the springboot app.